--- a/css/institucional.css
+++ b/css/institucional.css
@@ -1,18 +1,41 @@
-@media (max-width: 457px){
-    .titulo-institucional{
+@media (max-width: 457px) {
+    .titulo-institucional {
         font-size: 20px;
     }
 }
 
-@media (min-width: 1471px) {
+@media (min-width: 1200px) and (max-width: 1470px) {
     #institucional-content {
-        max-width: 1440px;
+        max-width: 85%;
+    }
+}
+
+@media (min-width: 1471px) and (max-width: 1699px) {
+    #institucional-content {
+        max-width: 85%;
+    }
+}
+
+@media (min-width: 1700px) {
+    #institucional-content {
+        max-width: 85%;
     }
 }
 
 /** ************************************************************************************ **/
 /** *********** INSTITUCIONAL **/
 /** ************************************************************************************ **/
+#box-bread-brumb-inst {
+    padding: 0px 0px 15px;
+    color: green;
+    position: relative;
+}
+
+
+#box-bread-brumb-inst a {
+    color: green !important;
+}
+
 #institucional-extra-top {
     height: 40px;
 }
@@ -49,6 +72,7 @@
     font-weight: 400;
     line-height: 18px;
     text-align: justify;
+    margin-right: 20px;
 }
 
 .conteudo-institucional p {
