--- a/css/lastagro.css
+++ b/css/lastagro.css
@@ -158,7 +158,7 @@ a.productImage {
 }
 
 .product-name a {
-    font-size: 12px;
+    font-size: 13px;
     text-transform: uppercase;
     color: gray !important;
 }
@@ -199,8 +199,16 @@ a.productImage {
 .price .best-price {
     display: block;
     text-decoration: none;
+    font-size: 14px;
+    color: darkgreen;
+    font-weight: bold;
+    padding: 10px 0 10px 0;
 }
 
 .price .old-price {
     text-decoration: line-through;
+    font-size: 12px;
+    color: gray;
+    top: 5px;
+    position: relative;
 }
