--- a/css/preguntas-frecuentes-agro.css
+++ b/css/preguntas-frecuentes-agro.css
@@ -59,3 +59,12 @@
     position: relative;
     right: 10px;
 }
+
+.conteudo-institucional-preguntas{
+    color: #63666A;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    text-align: justify;
+    margin-right: 0px;
+}
