--- a/css/bestselleragro.css
+++ b/css/bestselleragro.css
@@ -14,7 +14,7 @@
 /*************Estilos de las Laminas de Producto**************/
 /*************************************************************/
 .masvendidos {
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 .productImg {
@@ -34,6 +34,7 @@
     color: gray;
     text-transform: uppercase;
     margin-top: 10px;
+    font-weight: bolder;
 }
 
 .laminas .actualPrice {
