trabajo en el paginado del listado de productos, ya funciona pero tengo un detalle al cambiar el tipo de ordenamiento, si se me reinicia y se pone desde la pagina 1 y la cantidad a mostrar predeterminada, pero me dejan de funcionar los botones de atras y siguiente(que si avanza y se cambia de color a la supuesta page activa pero no me cambia los display de las laminas de hide to show a los que corresponden

--- a/css/categoria-agro.css
+++ b/css/categoria-agro.css
@@ -20,7 +20,6 @@ select+i.fa {
     background-color: #fff;
     padding-right: 5px;
     position: absolute;
-    right: 10px;
     top: 10px;
     color: green;
 }
@@ -92,10 +91,36 @@ select+i.fa {
     font-size: 14px;
 }
 
+/*********paginado estilos*********/
 #paginado-productos {
     border-bottom: 1px solid white;
     margin-top: 50px;
+    font-size: 14px;
 }
+
+.desplazBoton{
+    border: 0 !important;
+}
+
+.pag_prev{
+    margin-right: 20px;
+}
+
+.pag_next{
+    margin-left: 10px;
+}
+
+.numeros {
+    margin-right: 10px;
+}
+
+.pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover {
+    color: #fff !important;
+    background-color: green;
+    border-color: green;
+}
+
+/*********paginado estilos*********/
 
 .custom-select {
     font-size: 1.2rem;
